Se buscan host y database en ENV antes que en archivo de configuración

--- a/env.example
+++ b/env.example
@@ -1,6 +1,10 @@
 ODOOCLIUSER="odoo-user"
 ODOOCLIPASS="odoo-password"
 
+ODOOCLIHOST="host"
+ODOOCLIDATABASE="database"
+
+
 ODOOCLI_MAIL_SERVER="smtp.fake-gmail.com"
 ODOOCLI_MAIL_PORT=587
 ODOOCLI_MAIL_TLS=1
