refs: #15723 Añadida opción CC

--- a/env.example
+++ b/env.example
@@ -12,4 +12,5 @@ ODOOCLI_MAIL_USER="example-user@fake-gmail.com"
 ODOOCLI_MAIL_PASSWORD="fakePaswworForFakeMailUser"
 ODOOCLI_MAIL_FROM="example-user@fake-gmail.com"
 ODOOCLI_MAIL_REPLY_TO="example-user@fake-gmail.com"
+ODOOCLI_MAIL_CC="example-user@fake-gmail.com"
 
