refs: #15723 Añadida opción BCC

--- a/env.example
+++ b/env.example
@@ -13,4 +13,4 @@ ODOOCLI_MAIL_PASSWORD="fakePaswworForFakeMailUser"
 ODOOCLI_MAIL_FROM="example-user@fake-gmail.com"
 ODOOCLI_MAIL_REPLY_TO="example-user@fake-gmail.com"
 ODOOCLI_MAIL_CC="example-user@fake-gmail.com"
-
+ODOOCLI_MAIL_BCC="example-user@fake-gmail.com"
